--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: node_js
+services: mongodb
 node_js:
   - "0.8"
   - "0.10"
@@ -6,3 +7,5 @@ install:
   - npm update npm -g
   - npm install -g grunt-cli
   - npm install
+script:
+  - cp config.json-dist config.json
